--- a/intro.html
+++ b/intro.html
@@ -180,9 +180,15 @@
             }
 
             .section3 {
+                opacity: 1; /* !important 제거 */
                 height: 100vh;
                 overflow: hidden;
                 position: relative;
+            }
+
+            .section3 .opacityCover1,
+            .section3 .opacityCover2 {
+                opacity: 1; /* !important 제거 */
             }
 
             .section3 video {
@@ -241,6 +247,7 @@
             }
 
             .section4 {
+                opacity: 1; /* !important 제거 */
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -520,7 +527,7 @@
             .line:first-child {
                 margin-top: 100px;
             }
-            /* End Sangyoon's Style */
+            
         </style>
         <script>
             window.scrollTo({ top: 0, left: 0, behavior: 'instant' });
