--- a/detail_su.html
+++ b/detail_su.html
@@ -27,6 +27,17 @@
             font-style: normal;
         }
 
+        @keyframes fadein {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
+
+        }
+
         * {
             font-family: 'SokchoBadaDotum';
         }
@@ -78,6 +89,7 @@
             padding: 100px;
             display: flex;
             justify-content: center;
+            animation: fadein 1s;
         }
 
         .IntroImgArea {
@@ -147,6 +159,7 @@
             margin-right: 100px;
             margin-bottom: 100px;
             padding: 100px;
+            animation: fadein 1s;
         }
 
         .MBTItable {
@@ -214,6 +227,7 @@
             display: flex;
             justify-content: center;
             padding: 100px;
+            animation: fadein 1s;
         }
 
         .myStyle {
