인트로 문구뜨는거 수정

--- a/detail_ri.html
+++ b/detail_ri.html
@@ -300,7 +300,7 @@
             </div>
             <hr size="4px" color="gray">
             <div class="ImforText">
-                서울 건대 근처 거주하는 26살 화석 대학생입니다. 경제학과 컴퓨터공학을 복수전공 하고있어요.<br>
+                서울 건대 근처 거주하는 99년생 화석 대학생입니다. 경제학과 컴퓨터공학을 복수전공 하고있어요.<br>
                 <br>
                 금융권 IT, 핀테크 기업(토스)에 관심이 많습니다. 열심히 배우고, 백엔드 개발자로 시작하여 최종적으로는 풀스택 개발자가 되려고 합니다. 최종적인 목표는 창업이예요.<br>
                 <br>
@@ -329,8 +329,8 @@
                     <div class="MBTIsub">내향형</div>
                 </th>
                 <tr>
-                    <td> 22 </td>
-                    <td> 78 </td>
+                    <td> 22% </td>
+                    <td> 78% </td>
                 </tr>
             </table>
             <table style="margin-right: 5%;">
@@ -341,8 +341,8 @@
                     <div class="MBTIsub">직관형</div>
                 </th>
                 <tr>
-                    <td> 18 </td>
-                    <td> 82 </td>
+                    <td> 18% </td>
+                    <td> 82% </td>
                 </tr>
             </table>
             <table style="margin-right: 5%;">
@@ -353,8 +353,8 @@
                     <div class="MBTIsub">감정형</div>
                 </th>
                 <tr>
-                    <td> 85 </td>
-                    <td> 15 </td>
+                    <td> 85% </td>
+                    <td> 15% </td>
                 </tr>
             </table>
             <table>
@@ -365,8 +365,8 @@
                     <div class="MBTIsub">인식형</div>
                 </th>
                 <tr>
-                    <td> 26 </td>
-                    <td> 74 </td>
+                    <td> 26% </td>
+                    <td> 74% </td>
                 </tr>
             </table>
         </div>
