상세페이지 수정

--- a/detail_ri.html
+++ b/detail_ri.html
@@ -380,7 +380,7 @@
         </div>
         <div class="native">
             <div class="nativeLocation">구미
-                <div class="nativeText">생산 ~ 숙성 23년</div>
+                <div class="nativeText">생산 ~ 숙성 21년</div>
             </div>
             <div style="margin: 0% 3% 0% 3%;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
@@ -389,20 +389,19 @@
                         d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z" />
                 </svg>
             </div>
-            <div class="nativeLocation"> 서울
-                <div class="nativeText">숙성 24년차~
-                </div>
+            <div class="nativeLocation">미국 <!-- 여기에 주소지2을 써주세요 -->
+                <div class="nativeText">숙성 1년<!-- 여기에 거주년도2을 써주세요 --></div>
             </div>
-            <!-- <div>
+            <div style="margin: 0% 3% 0% 3%;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
                     class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
                     <path
                         d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z" />
                 </svg>
             </div>
-            <div class="nativeLocation">
-                <div class="nativeText"></div>
-            </div> -->
+            <div class="nativeLocation">서울<!-- 여기에 주소지3을 써주세요 -->
+                <div class="nativeText">숙성 3년차<!-- 여기에 거주년도3을 써주세요 --></div>
+            </div>
         </div>
     </div>
 
